--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ psycopg2-binary==2.9.9
 # Excel file handling
 openpyxl==3.1.2
 
+# Word document handling
+python-docx==1.1.0
+
 # Environment variables
 python-dotenv==1.0.0
 
